--- a/spec/support/fake_view_2.html
+++ b/spec/support/fake_view_2.html
@@ -30,7 +30,24 @@
   </div>
 
   <% @bulk_notices.each do |bulk_notice| %>
-  
+    <div class='row bg-white border-left border-right'>
+      <div class='col-4'>
+        <% if !bulk_notice.documents.empty? %>
+          <i class="fas fa-paperclip"></i>&nbsp;
+        <% end %>
+        <%= link_to bulk_notice.subject, exchanges_bulk_notice_path(bulk_notice) %>
+      </div>
+      <div class='col-2 text-right'>
+        <%= bulk_notice.audience_ids&.count || 0 %>
+      </div>
+      <div class='col-2 text-right'>
+        <%= bulk_notice.sent_at || bulk_notice.aasm_state.capitalize %>
+      </div>
+      <div class='col-2 text-right'>
+        <%= bulk_notice.audience_type&.humanize&.titleize %>
+      </div>
+      <div class='col-2 text-right'>
+        <%= bulk_notice.user&.person&.full_name %>
       </div>
     </div>
   <% end %>
